--- a/.gitmodules
+++ b/.gitmodules
@@ -6,11 +6,11 @@
 #    By: corozco <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/05 03:29:39 by corozco           #+#    #+#              #
-#    Updated: 2020/08/05 03:30:36 by corozco          ###   ########.fr        #
+#    Updated: 2020/08/05 03:33:16 by corozco          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 # General projects
 
 [submodule "projects/libft"]
-    path = projects/libft
+    path = projects/42_libft
     url = https://github.com/42corozco/42_libft
