--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 #    By: corozco <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/05 03:29:39 by corozco           #+#    #+#              #
-#    Updated: 2020/08/05 03:33:16 by corozco          ###   ########.fr        #
+#    Updated: 2020/08/05 03:35:07 by corozco          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 # General projects
@@ -14,3 +14,7 @@
 [submodule "projects/libft"]
     path = projects/42_libft
     url = https://github.com/42corozco/42_libft
+
+[submodule "projects/ft_server"]
+    path = projects/42_ft_server
+    url = https://github.com/42corozco/42_ft_server
